--- a/index.html
+++ b/index.html
@@ -36,5 +36,35 @@
         console.log(student2);
 
     </script>
+    <script>
+        // ...js spread/copy operator
+        let student3 = {
+            //1.P:v
+            //1."P":V
+            //1.'P':V
+
+            frame:"Chitransh",
+            "surname":"Garg",
+            'Address':"Neemuch",
+
+            //2. Method
+        }
+        //new property
+        //MobNo
+        //3. way of defining new property
+        //Using Spread/Copy Operator ...
+        let student4 = {
+           ...student3,
+           mobno:"9522278254",
+           salary:"300000"
+           
+           //1. p:V
+
+           //2. Method
+
+        }
+
+        console.log(student4);
+    </script>
 </body>
 </html>
